--- a/index.html
+++ b/index.html
@@ -1659,7 +1659,7 @@ color: white !important;
      <img src="aseets/img/dd.jpg"  class="img">
  </div>
  
- <p class="text13">Danyar kawa </p>
+ <p class="text13">Telegram @danial_cracker </p>
  <p class="text14">Manager | Developer </p>
  <row>
    <center>
