--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ font-family: kurds !important;
       </a>
       <h5 class="modal-title text9">Free Apple id premium Apps</h5>
       <img src="aseets/img/apps/appleid.jpg" height="170px" class="img2">
-      <p class="text12"> Email : Danyarapps@Gmail.com </p>
-      <p class="text12"> Pass : Danyar@12345 </p>
+      <p class="text12"> Email : 🔒 </p>
+      <p class="text12"> Pass : 🔒 </p>
       <div class="text-center mt-20"> <!-- text-right = text-align: right, mt-20 = margin-top: 2rem (20px) -->
         <a href="#" class="btn btn-primary text10" role="button">Ok Thankyou</a>
       </div>
@@ -1636,7 +1636,7 @@ color: white !important;
 
  
     <p class="text16">Jailbreak tools</p>
-    <p class="text17">JbTools Library Of Tweaked++ Apps , Hacked Games  </p>
+    <p class="text17">dano Library Of Tweaked++ Apps , Hacked Games  </p>
     <div class="row">
       <button class="btn btn-success btn-block font-size-14 botton1" type="button">Download Webapp</button>
     </div>
@@ -1671,7 +1671,7 @@ color: white !important;
  </div>
 
  <div class="card shadow-sm border-0 text25" >
-  All rights reserved , Jbtools 2020 
+  All rights reserved , KakDanoo 
 
 </div>
 
