--- a/index.html
+++ b/index.html
@@ -1107,12 +1107,12 @@ font-family: kurds;
     <a onclick="toggleDemo()"><i class="far fa-moon moon" aria-hidden="true"></i></a>
   
     <h2 class="card-title text1">
-      Jb tools
+      kurdish_stor
     </h2>
     
     <a href="https://t.me/ikurdish_store"><button  class="btn btn-primary btn-block font-size-16 botton1" type="button">Telegram</button></a>
     <br>
-    <a href="https://www.youtube.com/channel/UCkMgBNROoAQv8ZxaxCpTuJA?view_as=subscriber"><button class="btn btn-danger btn-block font-size-16 botton1" type="button">Youtube</button></a>
+    <a href="https://www.youtube.com/channel/"><button class="btn btn-danger btn-block font-size-16 botton1" type="button">Youtube</button></a>
 
 
  
