--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ font-family: kurds !important;
     content: url('aseets/img/games2.png');
    }
    a:hover img.i5{
-    content: url('aseets/img/search2.png');
+    content: url('https://upload.wikimedia.org/wikipedia/commons/0/0b/Search_Icon.svg');
    }
 
 .icob{
