--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ font-family: kurds !important;
     content: url('aseets/img/apps2.png');
    }
    a:hover img.i3{
-    content: url('aseets/img/games2.png');
+    content: url('https://upload.wikimedia.org/wikipedia/commons/0/0b/Search_Icon.svg');
    }
    a:hover img.i5{
     content: url('https://upload.wikimedia.org/wikipedia/commons/0/0b/Search_Icon.svg');
@@ -231,7 +231,7 @@ button:hover img.i1{
     content: url('aseets/img/apps2.png');
    }
    button:hover img.i3{
-    content: url('aseets/img/games2.png');
+    content: url('https://upload.wikimedia.org/wikipedia/commons/0/0b/Search_Icon.svg');
    }
    button:hover img.i4{
     content: url('aseets/img/update2.png');
