--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ font-family: kurds !important;
     content: url('aseets/img/apps2.png');
    }
    a:hover img.i3{
-    content: url('https://upload.wikimedia.org/wikipedia/commons/0/0b/Search_Icon.svg');
+    content: url('aseets/img/games2.png');
    }
    a:hover img.i5{
-    content: url('https://upload.wikimedia.org/wikipedia/commons/0/0b/Search_Icon.svg');
+    content: url('aseets/img/search.png');
    }
 
 .icob{
@@ -231,13 +231,13 @@ button:hover img.i1{
     content: url('aseets/img/apps2.png');
    }
    button:hover img.i3{
-    content: url('https://upload.wikimedia.org/wikipedia/commons/0/0b/Search_Icon.svg');
+    content: url('aseets/img/games2.png');
    }
    button:hover img.i4{
     content: url('aseets/img/update2.png');
    }
    button:hover img.i5{
-    content: url('https://upload.wikimedia.org/wikipedia/commons/0/0b/Search_Icon.svg');
+    content: url('aseets/img/search.png');
    }
 
    @font-face {
