--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ font-family: kurds !important;
     content: url('aseets/img/games2.png');
    }
    a:hover img.i5{
-    content: url('aseets/img/search.png');
+    content: url('https://archive.org/download/search2/search2.png');
    }
 
 .icob{
@@ -237,7 +237,7 @@ button:hover img.i1{
     content: url('aseets/img/update2.png');
    }
    button:hover img.i5{
-    content: url('aseets/img/search.png');
+    content: url('https://archive.org/download/search2/search2.png');
    }
 
    @font-face {
