--- a/index.html
+++ b/index.html
@@ -1572,7 +1572,8 @@ font-family: kurds;
                 </div>
                 </div>
                 </div>
-                 <a onclick="window.location='itms-services://?action=download-manifest&amp;url=https://jbtools.co/install/gta.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+                 <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/gta_20220602_202206/gta.plist
+';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
           
                 </div>
                 </div>
