--- a/index.html
+++ b/index.html
@@ -1330,7 +1330,7 @@ font-family: kurds;
                 <div class="w-full flex items-center justify-between p-3 alternate-background">
                 <div class="items-center justify-start content-center align-center flex flex-grow" style="width: calc(100% - 3rem);">
                 <div class="text-2xl text-grey-dark inline-flex w-auto mr-2 self-auto">
-                <img src="aseets/img/apps/ig.png" style="border-radius: 20%;" width="50px" height="50px" class="n">
+                <img src="Linkk" style="border-radius: 20%;" width="50px" height="50px" class="n">
                 </div>
                 <div style="max-width: calc(100% - 3.5rem);" class="flex-grow mr-2">
                 <div class="text5">
@@ -1342,7 +1342,7 @@ font-family: kurds;
                 </div>
                 </div>
                 </div>
-                  <a onclick="window.location='itms-services://?action=download-manifest&amp;url=https://jbtools.co/install/ig.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+                 <a Eclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/kine_20220602/kine.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
           
                 </div>
                 </div>
@@ -1352,7 +1352,7 @@ font-family: kurds;
                   <div class="w-full flex items-center justify-between p-3 alternate-background">
                   <div class="items-center justify-start content-center align-center flex flex-grow" style="width: calc(100% - 3rem);">
                   <div class="text-2xl text-grey-dark inline-flex w-auto mr-2 self-auto">
-                  <img src="aseets/img/apps/tiktok.png" style="border-radius: 20%;" width="50px" height="50px" class="n">
+                  <img src="https://archive.org/download/tiktok_202206/tiktok.png" style="border-radius: 20%;" width="50px" height="50px" class="n">
                   </div>
                   <div style="max-width: calc(100% - 3.5rem);" class="flex-grow mr-2">
                   <div class="text5">
@@ -1364,7 +1364,7 @@ font-family: kurds;
                   </div>
                   </div>
                   </div>
-                    <a onclick="window.location='itms-services://?action=download-manifest&amp;url=https://jbtools.co/install/tiktok.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+                    <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/kine_20220602/kine.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
             
                   </div>
                   </div>
@@ -1373,7 +1373,7 @@ font-family: kurds;
                     <div class="w-full flex items-center justify-between p-3 alternate-background">
                     <div class="items-center justify-start content-center align-center flex flex-grow" style="width: calc(100% - 3rem);">
                     <div class="text-2xl text-grey-dark inline-flex w-auto mr-2 self-auto">
-                    <img src="aseets/img/apps/Kinemaster.png" style="border-radius: 20%;" width="50px" height="50px" class="n">
+                    <img src="https://archive.org/download/kinemaster_202206/Kinemaster.png" style="border-radius: 20%;" width="50px" height="50px" class="n">
                     </div>
                     <div style="max-width: calc(100% - 3.5rem);" class="flex-grow mr-2">
                     <div class="text5">
@@ -1385,7 +1385,8 @@ font-family: kurds;
                     </div>
                     </div>
                     </div>
-                    <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/kine_20220602/kine.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+                    <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/videostar_20220602/videostar.plist
+';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
                     </div>
                     </div>
                     <hr>
@@ -1393,7 +1394,7 @@ font-family: kurds;
                       <div class="w-full flex items-center justify-between p-3 alternate-background">
                       <div class="items-center justify-start content-center align-center flex flex-grow" style="width: calc(100% - 3rem);">
                       <div class="text-2xl text-grey-dark inline-flex w-auto mr-2 self-auto">
-                      <img src="https://archive.org/download/kinemaster_202206/Kinemaster.png" style="border-radius: 20%;" width="50px" height="50px" class="n">
+                      <img src="https://archive.org/download/videostar_20220613/videostar.png" style="border-radius: 20%;" width="50px" height="50px" class="n">
                       </div>
                       <div style="max-width: calc(100% - 3.5rem);" class="flex-grow mr-2">
                       <div class="text5">
