--- a/index.html
+++ b/index.html
@@ -1323,8 +1323,7 @@ font-family: kurds;
               </div>
               </div>
               </div>
-             <a Eclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/fb_20220603_20220603/fb.plist
-';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+            <button class="btn btn-success btn-sm text11" style="color: white;" type="button">Install</button>
         
               </div>
               </div>
@@ -1345,8 +1344,7 @@ font-family: kurds;
                 </div>
                 </div>
                 </div>
-                 <a Eclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/ig_20220603/ig.plist
-';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+                <button class="btn btn-success btn-sm text11" style="color: white;" type="button">Install</button>
           
                 </div>
                 </div>
