--- a/index.html
+++ b/index.html
@@ -1366,8 +1366,7 @@ font-family: kurds;
                   </div>
                   </div>
                   </div>
-                    <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/videostar_20220602/videostar.plist
-';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+                    <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/videostar_20220602/videostar.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
             
                   </div>
                   </div>
@@ -1388,8 +1387,7 @@ font-family: kurds;
                     </div>
                     </div>
                     </div>
-                    <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/kine_20220602/kine.plist
-';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+                     <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/kine_20220602/kine.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
                     </div>
                     </div>
                     <hr>
