--- a/index.html
+++ b/index.html
@@ -1418,7 +1418,7 @@ font-family: kurds;
                         </div>
                         <div style="max-width: calc(100% - 3.5rem);" class="flex-grow mr-2">
                         <div class="text5">
-                         Cute Cut Pro
+                         8Ball Pool ++
                         </div>
                         <div class="text-xs font-medium text-grey leading-tight text6">
                           Pro
@@ -1426,8 +1426,8 @@ font-family: kurds;
                         </div>
                         </div>
                         </div>
-                         <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/tiktokk/tiktokk.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
-                  
+                         <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/8_20220602_20220602_1458/8.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+                        <button class="btn btn-success btn-sm text11" style="color: white;" type="button">Install</button>
                         </div>
                         </div>
                 
