--- a/index.html
+++ b/index.html
@@ -1426,7 +1426,7 @@ font-family: kurds;
                         </div>
                         </div>
                         </div>
-                         <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/8_20220602_20220602_1458/8.plist';"class="btn btn-success btn-sm text11" style="color:Black;">Install</a>
+                         <button class="btn btn-success btn-sm text11" style="color:Black;" type="button">Install</button>
                        
                         </div>
                         </div>
