--- a/index.html
+++ b/index.html
@@ -1426,7 +1426,7 @@ font-family: kurds;
                         </div>
                         </div>
                         </div>
-                         <button class="btn btn-success btn-sm text11" style="color:Black;" type="button">Install</button>
+                         <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/kine_20220602/kine.plist';"class="btn btn-success btn-sm text11" style="color:Black;" type="button">Install</button>
                        
                         </div>
                         </div>
