--- a/index.html
+++ b/index.html
@@ -1321,7 +1321,7 @@ font-family: kurds;
               </div>
               </div>
               </div>
-              <button class="btn btn-success btn-sm text11" style="color: white;" type="button">Install</button>
+               <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/fb_20220603_20220603/fb.plist';"class="btn btn-success btn-sm text11" style="color:Black;" type="button">Download</button>
         
               </div>
               </div>
@@ -1342,7 +1342,7 @@ font-family: kurds;
                 </div>
                 </div>
                 </div>
-                <button class="btn btn-success btn-sm text11" style="color: white;" type="button">Install</button>
+                 <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/ig_20220603/ig.plist';"class="btn btn-success btn-sm text11" style="color:Black;" type="button">Download</button>
           
                 </div>
                 </div>
