--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,7 @@ font-family: kurds;
         </div>
         </div>
         
-        <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/1_20220603_20220603_2323/1.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+        <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/1_20220603_20220603_2323/1.plist';"class="btn btn-success btn-sm text11" style="color:Black;" type="button">Download</button>
         </div>
         </div>
       <hr>
@@ -1300,7 +1300,7 @@ font-family: kurds;
           </div>
           </div>
           </div>
-           <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/tiktokk/tiktokk.plist';" class="btn btn-success btn-sm text11" style="color: white;">Install</a>
+           <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/tiktokk/tiktokk.plist';"class="btn btn-success btn-sm text11" style="color:Black;" type="button">Download</button>
     
           </div>
           </div>
