--- a/index.html
+++ b/index.html
@@ -1417,7 +1417,7 @@ font-family: kurds;
                         </div>
                         <div style="max-width: calc(100% - 3.5rem);" class="flex-grow mr-2">
                         <div class="text5">
-                        هیج زیاد ناکراوە
+                        Video Star Hack
                         </div>
                         <div class="text-xs font-medium text-grey leading-tight text6">
                           Pro
