--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,7 @@ font-family: kurds;
                       </div>
                       </div>
                       </div>
-                       <a onclick="window.location='';"class="btn btn-success btn-sm text11" style="color:Black;" type="button">هیج زیاد ناکراوە</button>
+                       <a onclick="window.location='';"class="btn btn-success btn-sm text11" style="color:Black;" type="button"<Download</button>
                 
                       </div>
                       </div>
