--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,7 @@ font-family: kurds;
                       </div>
                       </div>
                       </div>
-                       <a onclick="window.location='';"class="btn btn-success btn-sm text11" style="color:Black;" type="button"<Download</button>
+                       <a onclick="window.location='itms-services://?action=download-manifest&url=https://archive.org/download/videostar_20220602/videostar.plist';"class="btn btn-success btn-sm text11" style="color:Black;" type="button"<Download</button>
                 
                       </div>
                       </div>
@@ -1425,7 +1425,7 @@ font-family: kurds;
                         </div>
                         </div>
                         </div>
-                        <button class="btn btn-success btn-sm text11" style="color: white;" type="button">Install</button>
+                        <button class="btn btn-success btn-sm text11" style="color: white;" type="button">هیج زیاد نەکراوە</button>
                   
                         </div>
                         </div>
