--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,7 @@ font-family: kurds;
                         Video star
                       </div>
                       <div class="text-xs font-medium text-grey leading-tight text6">
-                        Unlock all features
+                         all features
                 
                       </div>
                       </div>
